--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL = "postgresql://postgres:f412DABg-1BEC5**b3e-GD5CGacB3G4g@roundhouse.proxy.rlwy.net:43942/railway"
+DATABASE_URL = "postgresql://postgres:2a21cAaE-EfBA6dBF6beF-1eaCcdBf2g@viaduct.proxy.rlwy.net:53110/railway"
